fix: added a 'button' tag inside the 'dt' tag to make the application more accessible

--- a/insurance.html
+++ b/insurance.html
@@ -146,50 +146,64 @@
 
                 <dl>
                     <div>
-                        <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-                        <dd class="font-2-s color-09">
+                        <dt>
+                            <button class="font-1-m-b" aria-expanded="true" aria-controls="faq01">Qual forma de pagamento vocês aceitam?</button>
+                        </dt>
+                        <dd id="faq01" class="font-2-s color-09 active">
                             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para 
                             pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.
                         </dd>
                     </div>
                     <div>
-                        <dt class="font-1-m-b">Como posso entrar em contato?</dt>
-                        <dd class="font-2-s color-09">
+                        <dt>
+                            <button class="font-1-m-b" aria-expanded="false" aria-controls="faq02">Como posso entrar em contato?</button>
+                        </dt>
+                        <dd id="faq02" class="font-2-s color-09">
                             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para 
                             pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.
                         </dd>
                     </div>
                     <div>
-                        <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
-                        <dd class="font-2-s color-09">
+                        <dt>
+                            <button class="font-1-m-b" aria-expanded="false" aria-controls="faq03">Vocês possuem algum desconto?</button>
+                        </dt>
+                        <dd id="faq03" class="font-2-s color-09">
                             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para 
                             pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.
                         </dd>
                     </div>
                     <div>
-                        <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
-                        <dd class="font-2-s color-09">
+                        <dt>
+                            <button class="font-1-m-b" aria-expanded="false" aria-controls="faq04">Qual a garantia que possuo?</button>
+                        </dt>
+                        <dd id="faq04" class="font-2-s color-09">
                             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para 
                             pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.
                         </dd>
                     </div>
                     <div>
-                        <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
-                        <dd class="font-2-s color-09">
+                        <dt>
+                            <button class="font-1-m-b" aria-expanded="false" aria-controls="faq05">Posso parcelar no boleto?</button>
+                        </dt>
+                        <dd id="faq05" class="font-2-s color-09">
                             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para 
                             pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.
                         </dd>
                     </div>
                     <div>
-                        <dt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
-                        <dd class="font-2-s color-09">
+                        <dt>
+                            <button class="font-1-m-b" aria-expanded="false" aria-controls="faq06">Quantas trocas posso fazer ao ano?</button>
+                        </dt>
+                        <dd id="faq06" class="font-2-s color-09">
                             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para 
                             pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.
                         </dd>
                     </div>
                     <div>
-                        <dt class="font-1-m-b">Qual Bikcraft devo escolher para o meu tamanho?</dt>
-                        <dd class="font-2-s color-09">
+                        <dt>
+                            <button class="font-1-m-b" aria-expanded="false" aria-controls="faq07">Qual Bikcraft devo escolher para o meu tamanho?</button>
+                        </dt>
+                        <dd id="faq07" class="font-2-s color-09">
                             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para 
                             pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.
                         </dd>
