--- a/insurance.html
+++ b/insurance.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="insurance container">
-                <div class="insurance-item">
+                <div class="insurance-item fadeInLeft" data-anime="200">
                     <h3 class="font-1-xl color-06">PRATA</h3>
                     <span class="font-1-xl color-00">R$ 199 <span class="font-1-xs color-06">mensal</span></span>
                     
@@ -59,7 +59,7 @@
                     <a class="button secondary" href="./budget.html?type=insurance&product=silver">Inscreva-se</a>
                 </div>
 
-                <div class="insurance-item">
+                <div class="insurance-item fadeInRight" data-anime="400">
                     <h3 class="font-1-xl color-p01">OURO</h3>
                     <span class="font-1-xl color-00">R$ 299 <span class="font-1-xs color-06">mensal</span></span>
 
@@ -267,6 +267,7 @@
             </div>
         </footer>
 
+        <script src="./js/plugins/simple-anime.js"></script>
         <script src="./js/script.js"></script>
     </body>
 </html>
