--- a/bikes/magic.html
+++ b/bikes/magic.html
@@ -7,13 +7,16 @@
         <meta name="description" content="A Magic Might é a melhor Bikcraft já criada pela 
         nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.">
         
-        <link rel="stylesheet" href="../css/style.css">
-    
+        <link rel="icon" href="../favicon.svg" type="image/svg+xml">
+
+        <link rel="preload" href="../css/style.min.css" as="style">
+        <link rel="stylesheet" href="../css/style.min.css">
+
+        <script>document.documentElement.classList.add('js');</script>
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-
-        <script>document.documentElement.classList.add('js');</script>
     </head>
     <body id="bike">
         <header class="header-bg">
