--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         <li>Cobertura estadual</li>
                     </ul>
 
-                    <a class="button secondary" href="./budget.html">Inscreva-se</a>
+                    <a class="button secondary" href="./budget.html?type=insurance&product=silver">Inscreva-se</a>
                 </div>
 
                 <div class="insurance-item">
@@ -213,7 +213,7 @@
                         <li>Acesso ao Clube Bikcraft</li>
                     </ul>
 
-                    <a class="button" href="./budget.html">Inscreva-se</a>
+                    <a class="button" href="./budget.html?type=insurance&product=gold">Inscreva-se</a>
                 </div>
             </div>
         </article>
